# NextVOD_Baremetal_SPL

./: CMakeLists.txt  LICENSE.STM  README.md  sh-unknown-elf.cmake  startup_stx7105.S  startup_stx7105_init_ram.S  stx7105.ld
tools/: flash_image.sh  pad_image.sh
